# pelagos

./: .gitignore  BUILD_ROOTFS.md  CGROUPS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  ONGOING_TASKS.md  PTY_DEEP_DIVE.md  README.md  ROADMAP.md  RUNTIME_COMPARISON.md  SECCOMP_DEEP_DIVE.md  SECCOMP_IMPLEMENTATION.md  TODO.org  build-rootfs-docker.sh  build-rootfs-tarball.sh  launch.sh  rust-toolchain.toml  setup.sh  test_syscalls.c
.github/workflows/: ci.yml  release.yml
docs/: ACCESS_PATTERNS.md  AUR_PUBLISHING.md  BUILD_ROOTFS.md  DESIGN_PRINCIPLES.md  E2E_TEST_PLAN.md  FEATURE_GAPS.md  HOME_MONITORING_CONFIG_NOTES.md  HOME_MONITORING_STACK.md  INTEGRATION_TESTS.md  MULTI_NETWORK.md  OCI_CONFORMANCE.md  ONGOING_TASKS.md  PHASE5_PLAN.md  PHASE6_NETWORKING_PLAN.md  REML_EXECUTOR_MODEL.md  ROADMAP.md  RUNTIME_COMPARISON.md  RUNTIME_STRATEGY_2026.md  RUSTERNETES_INTEGRATION.md  SECURITY.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md  WASM_SUPPORT.md  WATCHER_PROCESS_MODEL.md
examples/: seccomp_demo.rs
examples/compose/imperative/: compose-chain.reml  compose.reml  run.sh
examples/compose/jupyter/: README.md  compose.reml  run.sh
examples/compose/jupyter/jupyterlab/: Remfile
examples/compose/jupyter/redis/: Remfile
examples/compose/monitoring/: README.md  run.sh
examples/compose/monitoring/grafana/: Remfile
examples/compose/rust-builder/: README.md  run.sh
examples/compose/web-stack/: README.md  compose.rem  run-graph.sh
examples/full_stack_smoke/: main.rs
examples/multi-stage/: Cargo.toml  README.md  Remfile
examples/multi-stage/src/: main.rs
examples/web-stack/: README.md  run.sh
examples/web-stack/app/: app.py
examples/web-stack/proxy/: index.html
examples/web_pipeline/: main.rs
pkg/aur/pelagos/: .SRCINFO  PKGBUILD
pkg/aur/pelagos-bin/: .SRCINFO  PKGBUILD  pelagos-bin.install
pkg/nfpm/: nfpm.yaml  pelagos.tmpfiles  postinstall.sh
scripts/: bench-coldstart.sh  bench-results.md  build-rootfs-docker.sh  build-rootfs-tarball.sh  cleanup-fuse-overlayfs.sh  cleanup-mounts.sh  e2e-creds.env.example  fix-rootfs.sh  force-unmount.sh  install-httpd.sh  install.sh  launch-container.sh  reset-test-env.sh  run-conformance.sh  run-imperative-demo.sh  run-integration-tests.sh  setup.sh  start-monitoring.sh  test-dev.sh  test-e2e.sh  test-exec.sh  test-healthcheck.sh  test-ipv6-ping.sh  test-mount-fix.sh  test-namespace-join.sh  test-networking-failures.sh  test-registry-auth-e2e.sh  test-reml.sh  test-stress.sh  test-wasm-e2e.sh
scripts/hc-test-context/: Remfile
scripts/tutorial-e2e/p2-go/: Remfile
scripts/tutorial-e2e/p2-simple/: Remfile  server.sh
scripts/tutorial-e2e/p4-stack/: stack.reml
src/: build.rs  cgroup.rs  compose.rs  config.rs  container.rs  dns.rs  idmap.rs  image.rs  landlock.rs  lib.rs  main.rs  network.rs  notif.rs  oci.rs  paths.rs  pty.rs  seccomp.rs  sexpr.rs  wasm.rs
src/cli/: auth.rs  build.rs  compose.rs  exec.rs  health.rs  image.rs  logs.rs  mod.rs  network.rs  prune.rs  ps.rs  restart.rs  rm.rs  rootfs.rs  run.rs  start.rs  stop.rs  subscribe.rs  system.rs  volume.rs
src/lisp/: builtins.rs  eval.rs  mod.rs  pelagos.rs  remora.rs  runtime.rs  stdlib.lisp  value.rs
tests/: dockerd_smoke.rs  integration_tests.rs
tests/e2e/: hardening.bats  helpers.bash  lifecycle.bats
tests/e2e/fixtures/: sleep-probe.reml
