[package]
name = "remora"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
nix = { version = "0.31.1", features = ["process", "sched", "mount", "fs"] }
libc = "*"
clap = {version = "3.1.6", features = ["derive"] }
thiserror = "2.0"
bitflags = "2.6"
cgroups-rs = "0.5.0"  # Added 2026-02-16 for future cgroup management (v1 & v2 support)
seccompiler = "0.5.0"  # Pure Rust seccomp-BPF for syscall filtering (used by Firecracker)

# Removed unused dependencies:
# - subprocess (never used)
# - cgroups-fs (replaced with cgroups-rs which supports v1 & v2)
# - palaver (never used)