[package]
name = "remora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
nix = { version = "0.31.1", features = ["process", "sched", "mount", "fs", "term", "poll", "signal", "ioctl"] }
libc = "*"
clap = {version = "3.1.6", features = ["derive"] }
thiserror = "2.0"
bitflags = "2.6"
cgroups-rs = "0.5.0"  # Added 2026-02-16 for future cgroup management (v1 & v2 support)
seccompiler = "0.5.0"  # Pure Rust seccomp-BPF for syscall filtering (used by Firecracker)
serde = { version = "1", features = ["derive"] }  # JSON serialization for OCI config.json / state.json
serde_json = "1"  # JSON parsing for OCI bundle config and state files
oci-client = "0.16"  # OCI registry client for image pulls
tokio = { version = "1", features = ["rt", "net", "time", "io-util"] }  # Async runtime (used only for image pulls)
flate2 = "1"  # Gzip decompression for OCI layer tarballs
tar = "0.4"  # Tar extraction for OCI layers
tempfile = "3"  # Temp files for layer downloads

[dev-dependencies]
serial_test = "3"

# Removed unused dependencies:
# - subprocess (never used)
# - cgroups-fs (replaced with cgroups-rs which supports v1 & v2)
# - palaver (never used)